Navbar styles fix -> More btn aligned

--- a/components/Navbar.module.css
+++ b/components/Navbar.module.css
@@ -15,3 +15,11 @@
 .navbarItemWrapper {
   font-size: smaller;
 }
+
+.navbarBrand {
+  align-items: center;
+}
+
+.navbarEnd {
+  margin-top: 5px;
+}
